# darling-libxpc

./: CMakeLists.txt  endian_compat.h  msgio.c  nv.h  reboot3.c  subr_nvlist.c  subr_nvpair.c  todo.c  transaction.m  transaction_private.c  xpc_activity.c  xpc_array.c  xpc_connection.c  xpc_dictionary.c  xpc_internal.h  xpc_misc.c  xpc_pipe.c  xpc_private.c  xpc_type.c
include/os/: transaction_private.h
include/xpc/: launchd.h  launchd_defs.h  private.h  xpc.h
include/xpc/private/: bundle.h  date.h  endpoint.h  mach_recv.h  mach_send.h  pipe.h  plist.h
internal-include/xpc/: generic_array.h  internal.h  internal_base.h  plist.h  prefix.h  serialization.h  util.h
internal-include/xpc/objects/: activity.h  array.h  base.h  bool.h  bundle.h  connection.h  data.h  date.h  deserializer.h  dictionary.h  double.h  endpoint.h  error.h  fd.h  file_transfer.h  int64.h  mach_recv.h  mach_send.h  null.h  pipe.h  plist_binary_v0_deserializer.h  plist_xml_element.h  pointer.h  serializer.h  service.h  service_instance.h  shmem.h  string.h  uint64.h  uuid.h
liblaunch/: liblaunch.c
libxpc.xcodeproj/: project.pbxproj
libxpc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libxpc.xcodeproj/project.xcworkspace/xcuserdata/john.xcuserdatad/: UserInterfaceState.xcuserstate
libxpc.xcodeproj/xcshareddata/xcschemes/: xpc_static.xcscheme
libxpc.xcodeproj/xcuserdata/john.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
libxpc.xcodeproj/xcuserdata/john.xcuserdatad/xcschemes/: xcschememanagement.plist
libxpc/src/: activity.m  base.m  bool.m  bootstrap.m  bsm_wrappers.c  coalition.m  connection.m  data.m  date.m  dictionary.m  double.m  error.m  event.m  file_transfer.m  init.m  int64.m  launch.m  launchd.m  mach_recv.m  misc.m  null.m  pipe.m  plist.m  reboot.c  runtime.m  service.m  shmem.m  string.m  trace.m  transaction.m  type.m  uint64.m  util.m  uuid.m  vproc.m
libxpc/test/: array.m  base.m  bool.c  bundle.c  ctest-plus.h  data.c  plist.c  string.c  test-util.h  type.c
libxpc/test/bundled-service/: CMakeLists.txt  Info.plist  service.c
libxpc/test/launchd-service/: client_common.h  org.darlinghq.libxpc.test-service.plist  server.c  server_common.h
os/: transaction_private.h
private/: launch_priv.h
private/xpc/: generic_array.h  internal.h  internal_base.h  plist.h  prefix.h  util.h
private/xpc/objects/: array.h  bundle.h  connection.h  error.h  fd.h  mach_recv.h  mach_send.h  pointer.h  serializer.h  service.h
public/: bootstrap.h  launch.h  vproc.h
public/xpc/: activity.h  base.h  launchd.h  launchd_defs.h  private.h  xpc.h
public/xpc/private/: date.h  endpoint.h  mach_recv.h  pipe.h
scripts/: bin2hdr.py  exported-symbols.exp
src/: activity.c  activity.m  array.c  array.m  base.m  bool.m  bundle.m  coalition.m  connection.c  connection.m  data.m  date.m  dictionary.c  dictionary.m  double.m  endpoint.m  error.c  error.m  event.m  fd.m  file_transfer.m  init.c  int64.m  launchd.m  mach_recv.m  mach_send.m  misc.c  misc.m  null.m  pipe.c  pipe.m  plist.m  pointer.m  private.c  reboot3.c  runtime.m  serialization.c  serialization.m  serializer.m  service.m  (+11 more)
test/: CMakeLists.txt  array.m  base.m  bool.c  bundle.c  ctest-plus.h  data.c  dictionary.m  main.c  plist.c  string.c  test-util.h  type.c
test/bundled-service/: service.c
test/fixtures/: binary-sample.plist  xml-sample.plist
test/launchd-service/: CMakeLists.txt  client.c  client_common.h  org.darlinghq.libxpc.test-service.plist  pipe_client.c  server.c  server_common.h  service.h
transports/: mach.c
xpc/: activity.h  connection.h  launchd.h  launchd_defs.h  private.h  xpc.h
